# yandi

./: AGENT_TOOLS_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  requirements.txt  start.sh  start_headless.sh
node/: .gitignore  AUTH_IMPL_PLAN.md  AUTH_IMPL_STATUS.md  COMM_IMPROVEMENT_PLAN.md  COMM_IMPROVEMENT_STATUS.md  CURRENT_STATE.md  Cargo.toml  DEPLOYMENT.md  FUTURE_IDEAS.md  NETWORK_EVOLUTION_PLAN.md  NETWORK_EVOLUTION_STATUS.md  SECURITY_AUDIT_PLAN.md  SECURITY_AUDIT_STATUS.md  YANDI_ROADMAP.md  YANDI_TRANSPORT_PLAN.md  YANDI_TRANSPORT_UPDATES.md  YANDI_VISION.md
node/data/.yandi_cache/: transfer_ddc849659ac2d8cd_1775933783192.state  transfer_ddc849659ac2d8cd_1775937005507.state  transfer_f37ba75a2ab0cc78_01. Yalla.mp3_7214265.state  transfer_f37ba75a2ab0cc78_1.mp4_36960859.state
node/nodes/: README.md
node/src/: lib.rs  main.rs
node/src/ai_rpc/: knowledge.rs  mod.rs  ollama.rs  policy.rs  server.rs  types.rs
node/src/apps/: APPS_MODULE.md  README.md  message.rs  mod.rs  resource.rs
node/src/bootstrap/: README.md  mod.rs
node/src/communication/: 1large_file_transfer.rs  chat.rs  chat_before_profile.rs  encryption.rs  file_transfer.rs  mod.rs  profile_manager.rs  protocol.rs  protocol.rs.backup  storage.rs  types.rs
node/src/connectors/: README.md  mod.rs  obfuscate.rs  quic.rs  tunnel.rs
node/src/core/: README.md  config.rs  crypto.rs  crypto_storage.rs  identity.rs  image_processor.rs  mod.rs  profile.rs
node/src/dataplane/: README.md  metrics.rs  mod.rs  multipath.rs  qos.rs  registry.rs  stream.rs  transport.rs
node/src/dht/: README.md  bucket.rs  group_record.rs  hot_cache.rs  jurisdiction_index.rs  kademlia.rs  messages.rs  mod.rs  record.rs  storage.rs  taint.rs
node/src/mdns/: discovery.rs  mod.rs
node/src/media/: audio_capture.rs  mod.rs  p2p_bridge.rs  transport.rs
node/src/netlayer/: README.md  adaptive.rs  bootstrap.rs  broadcast.rs  circuit.rs  cli.rs  encryption.rs  external_ip.rs  interface_detector.rs  mod.rs  nat.rs  nat_pmp.rs  node_introspection.rs  onion.rs  onion_stream.rs  packet.rs  pairing.rs  peer.rs  port_manager.rs  rawip_tunnel.rs  relay.rs  socket_manager.rs  tcp_p2p_transport.rs  tls_cert.rs  transport.rs  tun_device.rs  tun_exit.rs  tunnel.rs  ws_transport.rs
node/src/observability/: README.md  dht_metrics.rs  logging.rs  metrics.rs  mod.rs
node/src/p2p/: encryption.rs  encryption_manager.rs  hello.rs  mod.rs  packet.rs  peer.rs  transport.rs
node/src/p2p_tunnel/: manager.rs  mod.rs  protocol.rs  tunnel.rs  types.rs
node/src/protocol/: README.md  express.rs  line.rs  mod.rs  nack.rs  ordering.rs  rate_controller.rs  station.rs  station_v1.rs  tcp_station.rs  tcp_transport.rs  tcp_tunnel.rs  tcp_tunnel_exit.rs  tcp_tunnel_exit_v2.rs  train.rs  wagon.rs
node/tests/: media_integration.rs  stress_test.rs
(+217 files in other folders)
