[package]
name = "yandi"
version = "0.2.0"
edition = "2021"
authors = ["YANDI Team"]
description = "Clean P2P network refactored from NET"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.9.0"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha3 = "0.10.8"
x25519-dalek = { version = "2.0" }
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
argon2 = "0.5"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "gif"] }

# QR-код для pairing flow (Hardening Step 3). Чистый Rust, без C-зависимостей.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5.0"

# Networking
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"

# Web server
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.9"
mime = "0.3"
mime_guess = "2.0"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# TUN device
tun = { version = "0.6", features = ["async"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Binary serialization
bincode = "1.3"

# Flags
bitflags = "2.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
num_cpus = "1.16"
libc = "0.2.180"

# mDNS service discovery
mdns-sd = "0.11"
base64 = "0.22.1"
once_cell = "1.20"
tokio-stream = "0.1"
futures-util = "0.3"

# Audio/Video codecs and WebRTC
opus = "0.3"
webrtc-srtp = "0.13"
webrtc-util = "0.8"
webrtc-mdns = "0.8"
webrtc-data = "0.8"
webrtc-media = "0.8"
webrtc-sctp = "0.10"
cpal = "0.15"
rodio = "0.19"
hound = "3.5"


# WebSocket-over-TLS для mobile↔anchor транспорта (Iter 2)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.24"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
rcgen = "0.13"
webpki-roots = "0.26"
time = "0.3"

[dev-dependencies]
tempfile = "3"

# QUIC for SNI spoofing and DPI evasion

[lib]
name = "yandi"
path = "src/lib.rs"

[[bin]]
name = "yandi"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[test]]
name = "stress_test"
path = "tests/stress_test.rs"

[[test]]
name = "media_integration"
path = "tests/media_integration.rs"


